API: update new customer
