# routes/modules/attendance.js
@@ -1,18 +1,15 @@
 const xlsxFile = require("read-excel-file/node");
-
-// const productModel = require("../../models/product");
 const attendanceModel = require("../../models/attendance");
 const accountModel = require("../../models/account");
 const phoneNumberValidator = require("validate-phone-number-node-js");
 
 module.exports = {
-    checkInTime: async (req, res, next) => {
-        // #swagger.tags = ['Check in - out']
+    attendanceCheckIn: async (req, res, next) => {
+        // #swagger.tags = ['Attendance']
         try {
             const userCode = req.body.userCode ? req.body.userCode.toUpperCase() : null;
             const checkIn = new Date();
             const accountQuery = await accountModel.findOne({ userCode });
-
             if (!userCode)
                 return res.status(200).json({
                     status: false,
@@ -49,102 +46,8 @@ module.exports = {
             });
         }
     },
-    CheckInOutGetAll: async (req, res, next) => {
-        // #swagger.tags = ['Check in - out']
-        try {
-            const filter = req.query.filter || "all";
-            const from = req.query.from || "";
-            const to = req.query.to || "";
-            const employeeQuery = await attendanceModel.find({});
-            let data = [];
-            if (employeeQuery) {
-                switch (filter) {
-                    case "all":
-                        data = employeeQuery;
-                    case "day":
-                        if (from && to) {
-                            if (from.includes("/") && to.includes("/") && from.split("/").length === 3 && to.split("/").length === 3) {
-                                const dayFrom = parseInt(from.split("/")[0]) || "";
-                                const monthFrom = parseInt(from.split("/")[1]) || "";
-                                const YearFrom = parseInt(from.split("/")[2]) || "";
-
-                                const dayTo = parseInt(to.split("/")[0]) || "";
-                                const monthTo = parseInt(to.split("/")[1]) || "";
-                                const YearTo = parseInt(to.split("/")[2]) || "";
-                                if (dayFrom && monthFrom && YearFrom && dayTo && monthTo && YearTo) {
-                                    employeeQuery.forEach((employee) => {
-                                        let dateQuery = employee.checkIn.toISOString().slice(0, 10);
-                                        const dayQuery = parseInt(dateQuery.split("-")[2]);
-                                        const monthQuery = parseInt(dateQuery.split("-")[1]);
-                                        const yearQuery = parseInt(dateQuery.split("-")[0]);
-                                        if (yearQuery >= parseInt(YearFrom) && yearQuery <= parseInt(YearTo)) {
-                                            if (monthQuery >= parseInt(monthFrom) && monthQuery <= parseInt(monthTo)) {
-                                                if (dayQuery >= parseInt(dayFrom) && dayQuery <= parseInt(dayTo)) {
-                                                    data.push(employee);
-                                                }
-                                            }
-                                        }
-                                    });
-                                } else {
-                                    return res.status(200).json({
-                                        status: false,
-                                        statusCode: 200,
-                                        msg: {
-                                            en: "Please enter time format : dd/mm/year",
-                                            vn: "Nhập dữ liệu thời gian với format như sau: dd/mm/year",
-                                        },
-                                    });
-                                }
-                            } else {
-                                return res.status(200).json({
-                                    status: false,
-                                    statusCode: 200,
-                                    msg: {
-                                        en: "Please enter time format : dd/mm/year",
-                                        vn: "Nhập dữ liệu thời gian với format như sau: dd/mm/year",
-                                    },
-                                });
-                            }
-                        } else {
-                            return res.status(200).json({
-                                status: false,
-                                statusCode: 200,
-                                msg: {
-                                    en: "Field date from,to are require!",
-                                    vn: "Vui lòng chọn thời gian bắt đầu và kết thúc",
-                                },
-                            });
-                        }
-
-                    default:
-                }
-                return res.status(200).json({
-                    status: true,
-                    statusCode: 200,
-                    msg: {
-                        en: "Get list check in-out employee successfully!",
-                        vn: "Lấy danh sách check in-out nhân viên thành công",
-                    },
-                    data: data,
-                });
-            } else {
-                return res.status(200).json({
-                    status: false,
-                    statusCode: 200,
-                    msg: { en: "List empty!", vn: "danh sách rỗng" },
-                });
-            }
-        } catch (error) {
-            return res.status(500).json({
-                status: false,
-                statusCode: 500,
-                msg: { en: "Interal Server Error" },
-                error: error.message,
-            });
-        }
-    },
-    checkOutTime: async (req, res, next) => {
-        // #swagger.tags = ['Check in - out']
+    attendanceCheckOut: async (req, res, next) => {
+        // #swagger.tags = ['Attendance']
         try {
             const userCode = req.body.userCode ? req.body.userCode.toUpperCase() : null;
             const accountQuery = await accountModel.findOne({ userCode });
@@ -203,6 +106,100 @@ module.exports = {
                     },
                 });
             }
+        } catch (error) {
+            return res.status(500).json({
+                status: false,
+                statusCode: 500,
+                msg: { en: "Interal Server Error" },
+                error: error.message,
+            });
+        }
+    },
+    attendanceGetAll: async (req, res, next) => {
+        // #swagger.tags = ['Attendance']
+        try {
+            let data = [];
+            const filter = req.query.filter || "all";
+            const from = req.query.from || "";
+            const to = req.query.to || "";
+            const employeeQuery = await attendanceModel.find({});
+            if (employeeQuery.length <= 0)
+                return res.status(200).json({
+                    status: true,
+                    statusCode: 200,
+                    msg: { en: "There is no data.", vn: "Danh sách trống, không có dữ liệu nào." },
+                    result: [],
+                });
+
+            switch (filter) {
+                case "all":
+                    data = employeeQuery;
+                case "day":
+                    if (from && to) {
+                        if (from.includes("/") && to.includes("/") && from.split("/").length === 3 && to.split("/").length === 3) {
+                            const dayFrom = parseInt(from.split("/")[0]) || "";
+                            const monthFrom = parseInt(from.split("/")[1]) || "";
+                            const YearFrom = parseInt(from.split("/")[2]) || "";
+
+                            const dayTo = parseInt(to.split("/")[0]) || "";
+                            const monthTo = parseInt(to.split("/")[1]) || "";
+                            const YearTo = parseInt(to.split("/")[2]) || "";
+                            if (dayFrom && monthFrom && YearFrom && dayTo && monthTo && YearTo) {
+                                employeeQuery.forEach((employee) => {
+                                    let dateQuery = employee.checkIn.toISOString().slice(0, 10);
+                                    const dayQuery = parseInt(dateQuery.split("-")[2]);
+                                    const monthQuery = parseInt(dateQuery.split("-")[1]);
+                                    const yearQuery = parseInt(dateQuery.split("-")[0]);
+                                    if (yearQuery >= parseInt(YearFrom) && yearQuery <= parseInt(YearTo)) {
+                                        if (monthQuery >= parseInt(monthFrom) && monthQuery <= parseInt(monthTo)) {
+                                            if (dayQuery >= parseInt(dayFrom) && dayQuery <= parseInt(dayTo)) {
+                                                data.push(employee);
+                                            }
+                                        }
+                                    }
+                                });
+                            } else {
+                                return res.status(200).json({
+                                    status: false,
+                                    statusCode: 200,
+                                    msg: {
+                                        en: "Please enter time format : dd/mm/year",
+                                        vn: "Nhập dữ liệu thời gian với format như sau: dd/mm/year",
+                                    },
+                                });
+                            }
+                        } else {
+                            return res.status(200).json({
+                                status: false,
+                                statusCode: 200,
+                                msg: {
+                                    en: "Please enter time format : dd/mm/year",
+                                    vn: "Nhập dữ liệu thời gian với format như sau: dd/mm/year",
+                                },
+                            });
+                        }
+                    } else {
+                        return res.status(200).json({
+                            status: false,
+                            statusCode: 200,
+                            msg: {
+                                en: "Field date from,to are require!",
+                                vn: "Vui lòng chọn thời gian bắt đầu và kết thúc",
+                            },
+                        });
+                    }
+
+                default:
+            }
+            return res.status(200).json({
+                status: true,
+                statusCode: 200,
+                msg: {
+                    en: "Get list check in-out employee successfully!",
+                    vn: "Lấy danh sách check in-out nhân viên thành công",
+                },
+                data: data,
+            });
         } catch (error) {
             return res.status(500).json({
                 status: false,
